<resources>
    <string name="app_name">NeWork</string>
    <string name="description_post_menu">Menu button</string>
    <string name="description_photo">Photo</string>
    <string name="description_post_like">Like Button</string>
    <string name="description_post_share">Share Button</string>
    <string name="description_post_author_avatar">Author avatar</string>
    <string name="button_sign_in">Log In</string>
    <string name="password_sign_in">Password</string>
    <string name="login_sign_in">Login</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="chooser_share_post">Share post</string>
    <string name="chooser_share_event">Share event</string>
    <string name="error_auth">Invalid login or password</string>
    <string name="page_users">Users</string>
    <string name="page_profile">Profile</string>
    <string name="page_posts">Posts</string>
    <string name="page_events">Events</string>
    <string name="registration_button">Registration</string>
    <string name="registration_text">Don\'t have an account?</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="error_password">Password mismatch</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="add_post">Create post</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="menu_save">Save</string>
    <string name="error_empty_content">Content can\'t be empty!</string>
    <string name="speakers_button">Speakers</string>
    <string name="join_button">Join</string>
    <string name="participants_button">Party</string>
    <string name="play_video">Video start button</string>
    <string name="add_event">Add event</string>
    <string name="media_chooser">Select application</string>
    <string name="empty_like_owners">Not liked</string>
    <string name="empty_participants">No participants</string>
    <string name="empty_speakers">No speakers</string>
    <string name="join_button_checked">Joined</string>
    <string name="join_button_unchecked">Join</string>
    <string name="date_text">Date:</string>
    <string name="format_event_text">Format:</string>
    <string name="error_play_audio">No application to play audio</string>
    <string name="error_play_video">No application to play video</string>
    <string name="logout_button">Log out</string>
    <string name="description_pick_audio">Pick audio</string>
    <string name="description_pick_video">Pick video</string>
    <string name="menu_hide">Hide</string>
    <string name="description_post_hide">Hide post</string>
    <string name="dash">—</string>
    <string name="avatar_button">Upload avatar</string>
    <string name="button_add_job">Add a job</string>
    <string name="header_posts">Posts</string>
    <string name="header_job">Jobs</string>
    <string name="error_create_new_job">Required fields must be filled</string>
</resources>