<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_posts"
        android:enabled="true"
        android:icon="@drawable/ic_posts_button_24dp"
        android:title="@string/page_posts"/>
    <item
        android:id="@+id/navigation_events"
        android:enabled="true"
        android:icon="@drawable/ic_event_button_24dp"
        android:title="@string/page_events"/>

    <item
        android:id="@+id/navigation_users"
        android:enabled="true"
        android:icon="@drawable/ic_users_button_24dp"
        android:title="@string/page_users"/>

    <item
        android:id="@+id/navigation_my_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile_button_24dp"
        android:title="@string/page_profile"/>
</menu>