<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollViewSignIn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="-26dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/app_name"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:gravity="start|top"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appName"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:gravity="start|top"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:contentDescription=""
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/login_sign_in"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.279"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/name"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.28"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/password_sign_in"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/repeatTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/repeat_password"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/repeatPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.348"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/repeatPassword"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:contentDescription=""
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/avatarButton"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/primaryColor"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/avatar_button"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repeatPassword"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/primaryColor"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/registration_button"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatarButton"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>